2023-02-07  Markus Gans  <guru.mail@muenster.de>
	* Escape sequences can now be used to repeat UTF-8 characters, which 
	  increases the display speed

2023-12-30  Markus Gans  <guru.mail@muenster.de>
	* FColorPair can now be used as input for FVTermAttribute::setColor

2023-12-21  Markus Gans  <guru.mail@muenster.de>
	* FListBox now has a findItem method

2023-12-10  Markus Gans  <guru.mail@muenster.de>
	* Permit message box without buttons

2023-11-26  Markus Gans  <guru.mail@muenster.de>
	* Fix incorrectly calculated coordinates in FScrollView 
	  on position changes
	* Minor speed improvements in the terminal display

2023-11-11  Markus Gans  <guru.mail@muenster.de>
	* Optimized mouse string parser

2023-11-03  Markus Gans  <guru.mail@muenster.de>
	* Reorganize the data structure of widget color theme

2023-10-30  Markus Gans  <guru.mail@muenster.de>
	* Terminal detection can be turned off again
	* The missing null pointer check has been added to the constructor 
	  of FWindow

2023-10-26  Markus Gans  <guru.mail@muenster.de>
	* Reorganize the data structure of FOptiMove

2023-10-25  Markus Gans  <guru.mail@muenster.de>
	* Reorganize the data structure of FVTerm::FTermArea

2023-10-23  Markus Gans  <guru.mail@muenster.de>
	* Reorganize the data structure of FOptiAttr

2023-10-14  Markus Gans  <guru.mail@muenster.de>
	* Switch to a readers-writer lock for the timer list

2023-10-07  Markus Gans  <guru.mail@muenster.de>
	* Bugfix: Bottom transparent shadow changes were registered in wrong row

2023-10-03  Markus Gans  <guru.mail@muenster.de>
	* Eliminate undefined behavior on exit

2023-09-17  Markus Gans  <guru.mail@muenster.de>
	* Better direct access to FCharAttribute type

2023-06-04  Markus Gans  <guru.mail@muenster.de>
	* Added support for a tiltable scroll wheel. This allows you to scroll 
	  the context of widgets left and right in an xterm

2023-05-31  Markus Gans  <guru.mail@muenster.de>
	* Fix setFormatedNumber() in FString for separator > 127 